Fix layout overflow caused by scroll bar

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
   color: #808080;
   background-color: #f9f9f9;
 
+  overflow-y: scroll;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
